--- a/output/reports/errors.html
+++ b/output/reports/errors.html
@@ -40,14 +40,6 @@
 
             <div class="nav-collapse">
                 <ul class="nav pull-right">
-                                        <li class="dropdown">
-                        <a href="../index.html" class="dropdown-toggle" data-toggle="dropdown">
-                            API Documentation <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                                                        <li><a href="../namespaces/Sensorario.html">\Sensorario</a></li>
-                                                    </ul>
-                    </li>
                                         <li class="dropdown" id="charts-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Charts <b class="caret"></b>
@@ -67,7 +59,7 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="../reports/errors.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">13</span>
+                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">1</span>
                                 </a>
                             </li>
                             <li>
@@ -97,7 +89,7 @@
 
             <ul class="side-nav nav nav-list">
                 <li class="nav-header">Navigation</li>
-                                                                            <li><a href="#ValueObject.php"><i class="icon-file"></i> ValueObject.php</a></li>
+                                                                            <li><a href="#src"><i class="icon-file"></i> src</a></li>
                                                                     </ul>
         </div>
 
@@ -109,11 +101,11 @@
 
             
                             <div class="package-contents">
-                                            <a name="ValueObject.php" id="ValueObject.php"></a>
+                                            <a name="src" id="src"></a>
                         <h3>
                             <i class="icon-file"></i>
-                            ValueObject.php
-                            <small style="float: right;padding-right: 10px;">13</small>
+                            src
+                            <small style="float: right;padding-right: 10px;">1</small>
                         </h3>
                         <div>
                             <table class="table markers table-bordered">
@@ -129,66 +121,6 @@
                                         <td>error</td>
                                         <td>0</td>
                                         <td>No summary was found for this file</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>14</td>
-                                        <td>Argument $functionName is missing from the Docblock of __call</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>14</td>
-                                        <td>Argument $arguments is missing from the Docblock of __call</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>14</td>
-                                        <td>No summary for method __call()</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>21</td>
-                                        <td>Argument $properties is missing from the Docblock of __construct</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>21</td>
-                                        <td>No summary for method __construct()</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>29</td>
-                                        <td>No summary for method ensureMandatoryProperties()</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>40</td>
-                                        <td>No summary for method ensureAllowedProperties()</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>56</td>
-                                        <td>Argument $properties is missing from the Docblock of box</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>56</td>
-                                        <td>No summary for method box()</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>63</td>
-                                        <td>No summary for method mandatory()</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>68</td>
-                                        <td>No summary for method allowed()</td>
-                                    </tr>
-                                                                    <tr>
-                                        <td>error</td>
-                                        <td>12</td>
-                                        <td>No summary for property $properties</td>
                                     </tr>
                                                             </tbody>
                             </table>
@@ -206,7 +138,6 @@
                                                         <h1><i class="icon-code"></i></h1>
                             <div>
                                 <ul>
-                                                                            <li><a href="../namespaces/Sensorario.html">\Sensorario</a></li>
                                                                     </ul>
                             </div>
                         </section>
@@ -234,7 +165,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on July 28th, 2015 at 04:03.
+                    on July 28th, 2015 at 04:25.
                 </section>
             </section>
         </section>
