--- a/output/namespaces/Sensorario.html
+++ b/output/namespaces/Sensorario.html
@@ -66,12 +66,12 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="../reports/errors.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">13</span>
+                                                                                                                                                                                                                                                                                                                                                <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">13</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="../reports/markers.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">0</span>
+                                                                                                                                                                                                                                                                                                                                                <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">10</span>
                                 </a>
                             </li>
                             <li>
@@ -96,29 +96,47 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-359067752"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1440447520"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-359067752" class="accordion-body collapse in">
+            <div id="namespace-1440447520" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                                                     <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#namespace-1183855022"></a>
+                                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#namespace-1705211112"></a>
                                 <a href="../namespaces/Sensorario.html" style="margin-left: 30px; padding-left: 0">Sensorario</a>
             </div>
-            <div id="namespace-1183855022" class="accordion-body collapse ">
+            <div id="namespace-1705211112" class="accordion-body collapse ">
                 <div class="accordion-inner">
 
                                                     <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#namespace-636190356"></a>
+                                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#namespace-503991262"></a>
                                 <a href="../namespaces/Sensorario.ValueObject.html" style="margin-left: 30px; padding-left: 0">ValueObject</a>
             </div>
-            <div id="namespace-636190356" class="accordion-body collapse ">
+            <div id="namespace-503991262" class="accordion-body collapse ">
                 <div class="accordion-inner">
+
+                                                    <div class="accordion" style="margin-bottom: 0">
+        <div class="accordion-group">
+            <div class="accordion-heading">
+                                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#namespace-1964445502"></a>
+                                <a href="../namespaces/Sensorario.ValueObject.Exceptions.html" style="margin-left: 30px; padding-left: 0">Exceptions</a>
+            </div>
+            <div id="namespace-1964445502" class="accordion-body collapse ">
+                <div class="accordion-inner">
+
+                    
+                    <ul>
+                                                                                                    <li class="class"><a href="../classes/Sensorario.ValueObject.Exceptions.NotAllowedParameterEceptions.html">NotAllowedParameterEceptions</a></li>
+                                            </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
                     
                     <ul>
@@ -221,7 +239,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on July 28th, 2015 at 04:03.
+                    on July 28th, 2015 at 07:26.
                 </section>
             </section>
         </section>
