--- a/output/reports/errors.html
+++ b/output/reports/errors.html
@@ -40,6 +40,14 @@
 
             <div class="nav-collapse">
                 <ul class="nav pull-right">
+                                        <li class="dropdown">
+                        <a href="../index.html" class="dropdown-toggle" data-toggle="dropdown">
+                            API Documentation <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                                                        <li><a href="../namespaces/Sensorario.html">\Sensorario</a></li>
+                                                    </ul>
+                    </li>
                                         <li class="dropdown" id="charts-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Charts <b class="caret"></b>
@@ -59,12 +67,12 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="../reports/errors.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">1</span>
+                                                                                                                                                                                                                                                                                                                                                <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">13</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="../reports/markers.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">0</span>
+                                                                                                                                                                                                                                                                                                                                                <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">10</span>
                                 </a>
                             </li>
                             <li>
@@ -89,7 +97,9 @@
 
             <ul class="side-nav nav nav-list">
                 <li class="nav-header">Navigation</li>
-                                                                            <li><a href="#src"><i class="icon-file"></i> src</a></li>
+                                                                            <li><a href="#value-object"><i class="icon-file"></i> value-object</a></li>
+                                                                                                    <li><a href="#value-object/src/Sensorario/ValueObject/Exceptions/NotAllowedParameterException.php"><i class="icon-file"></i> value-object/src/Sensorario/ValueObject/Exceptions/NotAllowedParameterException.php</a></li>
+                                                                                                    <li><a href="#value-object/src/Sensorario/ValueObject/ValueObject.php"><i class="icon-file"></i> value-object/src/Sensorario/ValueObject/ValueObject.php</a></li>
                                                                     </ul>
         </div>
 
@@ -101,10 +111,10 @@
 
             
                             <div class="package-contents">
-                                            <a name="src" id="src"></a>
+                                            <a name="value-object" id="value-object"></a>
                         <h3>
                             <i class="icon-file"></i>
-                            src
+                            value-object
                             <small style="float: right;padding-right: 10px;">1</small>
                         </h3>
                         <div>
@@ -126,6 +136,108 @@
                             </table>
                         </div>
                                     </div>
+                            <div class="package-contents">
+                                            <a name="value-object/src/Sensorario/ValueObject/Exceptions/NotAllowedParameterException.php" id="value-object/src/Sensorario/ValueObject/Exceptions/NotAllowedParameterException.php"></a>
+                        <h3>
+                            <i class="icon-file"></i>
+                            value-object/src/Sensorario/ValueObject/Exceptions/NotAllowedParameterException.php
+                            <small style="float: right;padding-right: 10px;">2</small>
+                        </h3>
+                        <div>
+                            <table class="table markers table-bordered">
+                                <thead>
+                                <tr>
+                                    <th>Type</th>
+                                    <th>Line</th>
+                                    <th>Description</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>0</td>
+                                        <td>No summary was found for this file</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>7</td>
+                                        <td>No summary for class \Sensorario\ValueObject\Exceptions\NotAllowedParameterEceptions</td>
+                                    </tr>
+                                                            </tbody>
+                            </table>
+                        </div>
+                                    </div>
+                            <div class="package-contents">
+                                            <a name="value-object/src/Sensorario/ValueObject/ValueObject.php" id="value-object/src/Sensorario/ValueObject/ValueObject.php"></a>
+                        <h3>
+                            <i class="icon-file"></i>
+                            value-object/src/Sensorario/ValueObject/ValueObject.php
+                            <small style="float: right;padding-right: 10px;">10</small>
+                        </h3>
+                        <div>
+                            <table class="table markers table-bordered">
+                                <thead>
+                                <tr>
+                                    <th>Type</th>
+                                    <th>Line</th>
+                                    <th>Description</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>0</td>
+                                        <td>No summary was found for this file</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>29</td>
+                                        <td>No summary for method __call()</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>40</td>
+                                        <td>No summary for method __construct()</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>53</td>
+                                        <td>No summary for method ensureMandatoryProperties()</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>69</td>
+                                        <td>No summary for method ensureAllowedProperties()</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>92</td>
+                                        <td>Argument $properties is missing from the Docblock of box</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>92</td>
+                                        <td>No summary for method box()</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>106</td>
+                                        <td>No summary for method mandatory()</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>118</td>
+                                        <td>No summary for method allowed()</td>
+                                    </tr>
+                                                                    <tr>
+                                        <td>error</td>
+                                        <td>21</td>
+                                        <td>No summary for property $properties</td>
+                                    </tr>
+                                                            </tbody>
+                            </table>
+                        </div>
+                                    </div>
                     </div>
     </section>
 
@@ -138,6 +250,7 @@
                                                         <h1><i class="icon-code"></i></h1>
                             <div>
                                 <ul>
+                                                                            <li><a href="../namespaces/Sensorario.html">\Sensorario</a></li>
                                                                     </ul>
                             </div>
                         </section>
@@ -165,7 +278,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on July 28th, 2015 at 04:31.
+                    on July 28th, 2015 at 07:26.
                 </section>
             </section>
         </section>
