--- a/output/reports/markers.html
+++ b/output/reports/markers.html
@@ -40,6 +40,14 @@
 
             <div class="nav-collapse">
                 <ul class="nav pull-right">
+                                        <li class="dropdown">
+                        <a href="../index.html" class="dropdown-toggle" data-toggle="dropdown">
+                            API Documentation <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                                                        <li><a href="../namespaces/Sensorario.html">\Sensorario</a></li>
+                                                    </ul>
+                    </li>
                                         <li class="dropdown" id="charts-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Charts <b class="caret"></b>
@@ -59,12 +67,12 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="../reports/errors.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">1</span>
+                                                                                                                                                                                                                                                                                                                                                <i class="icon-list-alt"></i>&#160;Errors <span class="label label-info pull-right">13</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="../reports/markers.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">0</span>
+                                                                                                                                                                                                                                                                                                                                                <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">10</span>
                                 </a>
                             </li>
                             <li>
@@ -88,7 +96,8 @@
         <div class="span2 sidebar">
             <ul class="side-nav nav nav-list">
                 <li class="nav-header">Navigation</li>
-                                                                                                    </ul>
+                                                                                                                                                                                        <li><a href="#value-object/src/Sensorario/ValueObject/ValueObject.php"><i class="icon-file"></i> value-object/src/Sensorario/ValueObject/ValueObject.php</a></li>
+                                                                    </ul>
         </div>
 
         <div class="span10 offset2">
@@ -98,10 +107,82 @@
                 <li>Markers</li>
             </ul>
 
-                            <div class="alert alert-info">No markers have been found in this project.</div>
             
             <div id="marker-accordion">
-                                                                </div>
+                                                                                                                                    <div class="package-contents">
+                            <a name="value-object/src/Sensorario/ValueObject/ValueObject.php" id="value-object/src/Sensorario/ValueObject/ValueObject.php"></a>
+                            <h3>
+                            <i class="icon-file"></i>
+                                value-object/src/Sensorario/ValueObject/ValueObject.php
+                                <small style="float: right;padding-right: 10px;">10</small>
+                            </h3>
+                            <div>
+                                <table class="table markers table-bordered">
+                                    <tr>
+                                        <th>Type</th>
+                                        <th>Line</th>
+                                        <th>Description</th>
+                                    </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>19</td>
+                                            <td>complete this dock bloc comment</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>29</td>
+                                            <td>complete this dock bloc comment</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>40</td>
+                                            <td>complete this dock bloc comment</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>53</td>
+                                            <td>complete this dock bloc comment</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>53</td>
+                                            <td>create a MissingMandatoryException class</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>69</td>
+                                            <td>complete this dock bloc comment</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>69</td>
+                                            <td>create a NotallowedParameterException class</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>92</td>
+                                            <td>complete this dock bloc comment
+Generic constructor.
+This method aims to generate all Value Objects.</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>106</td>
+                                            <td>complete this dock bloc comment
+Mandatory properties.
+This method returns the array corresponding to the list of all mandatory properties.</td>
+                                        </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>118</td>
+                                            <td>complete this dock bloc comment
+Allowed properties.
+This method returns the array corresponding to the list of all allowed properties.</td>
+                                        </tr>
+                                                                    </table>
+                            </div>
+                        </div>
+                                                </div>
         </div>
     </section>
 
@@ -114,6 +195,7 @@
                                                         <h1><i class="icon-code"></i></h1>
                             <div>
                                 <ul>
+                                                                            <li><a href="../namespaces/Sensorario.html">\Sensorario</a></li>
                                                                     </ul>
                             </div>
                         </section>
@@ -141,7 +223,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on July 28th, 2015 at 04:31.
+                    on July 28th, 2015 at 07:26.
                 </section>
             </section>
         </section>
